package dev.bebora.swecker.util

object TestConstants {
    const val logout = "Log out"
    const val email = "email"
    const val password = "password"
    const val home = "home"
    const val personal = "personal"
    const val groups = "groups"
    const val channels = "channel"
    const val fab = "fab"
    const val handle = "handle"
    const val name = "name"
    const val proceed = "proceed"
    const val confirm = "confirm"
    const val dayEnabled = "dayEnabled"
    const val dayDisabled = "dayDisabled"
    const val removeFriend = "removeFriend"
    const val acceptFriend = "acceptFriend"
    const val dragRingingAlarm = "dragRingingAlarm"
    const val addChannelAlarm = "addChannelAlarm"
    const val sendMessage = "sendMessage"
    const val alarmCardTime = "alarmCardTime"
    const val settingsSwitch = "settingsSwitch"
    const val popupOption = "popupOption"
    const val volumeSlider = "volumeSlider"
}
