<resources>
    <string name="app_name" translatable="false">Swecker</string>
    <string name="settings_title">Settings</string>
    <string name="account_section_title">Account</string>
    <string name="account_section_description">Manage synchronization across devices</string>
    <string name="theme_section_title">Theme</string>
    <string name="theme_section_description">Manage appearance and colors</string>
    <string name="sounds_section_title">Sounds and vibration</string>
    <string name="sounds_section_description">Manage alarm sounds</string>
    <string name="about_section_title">About</string>
    <string name="about_section_description">App information</string>
    <string name="account_change_name">Tap to change name</string>
    <string name="account_change_username">Tap to change username</string>
    <string name="sounds_ringtone">Ringtone</string>
    <string name="sounds_ringtone_duration">Ringtone duration</string>
    <string name="sounds_volume">Volume</string>
    <string name="sounds_vibration">Vibration</string>
    <string name="dark_mode_system">Use system settings</string>
    <string name="dark_mode_disabled">Disabled</string>
    <string name="dark_mode_enabled">Enabled</string>
    <string name="dark_mode_dialog_title">Dark mode</string>
    <string name="dismiss_dialog">Dismiss</string>
    <string name="ringtone_default">Nuclear</string>
    <string name="ringtone_variation_1">Morning Joy</string>
    <string name="ringtone_variation_2">Alarm Clock</string>
    <string name="confirm_dialog">Confirm</string>
    <string name="duration_seconds_5">5 seconds</string>
    <string name="duration_seconds_30">30 seconds</string>
    <string name="duration_minute_1">1 minute</string>
    <string name="duration_minutes_5">5 minutes</string>
    <string name="password_placeholder" translatable="false">Password</string>
    <string name="sign_up_button">Sign up</string>
    <string name="log_in_button">Log in</string>
    <string name="ask_signup">Need an account?</string>
    <string name="feature_sync">Sync your alarms across multiple devices</string>
    <string name="feature_groups">Create alarms for you and your friends</string>
    <string name="feature_channels">Subscribe to alarm channels</string>
    <string name="feature_chat">Chat with other people subscribed to the same alarms</string>
    <string name="ask_existing_account">Already have an account?</string>
    <string name="go_back">Go back</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_username">Edit username</string>
    <string name="login_header">Log into your account to unlock all the features!</string>
    <string name="magic_dynamic_theme">Magic dynamic theme</string>
    <string name="color_scheme_selected">Color scheme selected</string>
    <string name="email_placeholder" translatable="false">Email</string>
    <string name="login_appbar_title">Login</string>
    <string name="signup_appbar_title">Signup</string>
    <string name="password_lock">Lock</string>
    <string name="invalid_email">The entered email is not valid</string>
    <string name="invalid_password">Your password should have at least six letters and include one digit, one lower case letter and one upper case letter.</string>
    <string name="unknown_error">Unknown error. Are you using a working Internet connection?</string>
    <string name="invalid_user">The user does not exist or has been disabled</string>
    <string name="wrong_password">The entered password does not match</string>
    <string name="email_already_exists">An account is already registered with the entered email</string>
    <string name="signup_error">An error occurred while creating your account</string>
    <string name="save_user_error">An error occurred while saving user data</string>
    <string name="unavailable_username">The entered username is not available</string>
    <string name="blank_user_or_username">Name and username cannot be empty</string>
    <string name="contacts_title">Contacts</string>
    <string name="friendship_request_already_sent">You have already sent a friendship request to this user</string>
    <string name="request_friendship_error">An error has occurred while sending your friendship request</string>
    <string name="friendship_request_correctly_sent">The friendship request has been sent</string>
    <string name="title_activity_notification" translatable="false">NotificationActivity</string>
    <string name="add_contact_title">Add contacts</string>
    <string name="search_contact_by_username_placeholder">Search by username</string>
    <string name="friendship_request_to_yourself">You cannot add yourself as a friend</string>
    <string name="friendship_request_correctly_accepted">You have successfully accepted the friendship request</string>
    <string name="friendship_request_not_exists">Friendship request not found</string>
    <string name="accept_friendship_error">An error has occurred while accepting the friendship request</string>
    <string name="friend_correctly_removed">Friend successfully removed</string>
    <string name="remove_friend_error">An error has occurred while removing your friend</string>
    <string name="no_users_found">No users found</string>
    <string name="channels">Channels</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="repeat_on">Repeat on</string>
    <string name="enable_chat">Enable chat</string>
    <string name="select_time">Select time</string>
    <string name="delete_alarm_dialog_title">Delete alarm</string>
    <string name="delete_alarm_dialog_body">Do you really want to delete this alarm? The operation is irreversible</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="select_date">Select date</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="personal">Personal</string>
    <string name="groups">Groups</string>
    <string name="suggest_alarm_selection">Select an alarm</string>
    <string name="suggest_group_selection">Select a group</string>
    <string name="suggest_channel_selection">Select a channel</string>
    <string name="members">members</string>
    <string name="palette">Palette</string>
    <string name="example_alarm_name">Example alarm</string>
    <string name="new_channel">New channel</string>
    <string name="new_group">New group</string>
    <string name="add_a_friend">Add a friend</string>
    <string name="alarms_overview">Alarms overview</string>
    <string name="contacts_management">Contacts management</string>
    <string name="channel_handle">Handle</string>
    <string name="channel_name">Name</string>
    <string name="search_contacts">Search contacts</string>
    <string name="next_group_creation">Next</string>
    <string name="back_group_creation">Back</string>
    <string name="add_alarm_title">Add alarm</string>
    <string name="open_hamburger_menu">Open hamburger menu</string>
    <string name="friendship_requests">Friendship requests</string>
    <string name="no_contact_warning">You do not have any contacs</string>
    <string name="friends_section_title">Friends</string>
    <string name="no_friendship_requests_warning">You do not have any friendship requests</string>
    <string name="message_placeholder">Message</string>
    <string name="no_groups_warning">No groups</string>
    <string name="no_channels_warning">No channels</string>
    <string name="no_alarms_warning">No alarms</string>
    <string name="group_name">Name</string>
    <string name="loading">Loading</string>
    <string name="visibility">Visibility</string>
    <string name="alarms_management">Alarms management</string>
</resources>
